--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "framer-motion": "^12.3.1",
+    "html-entities": "^2.5.2",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
@@ -57,6 +58,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.6",
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.0.0",
